fix: slide-contentにgapプロパティを追加

--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -62,6 +62,7 @@
         display: flex;
         flex-direction: column;
         padding: 3.2rem 0;
+        gap: 10px;
 
         @include m.break-point(swiper-sp) {
             padding: 1.5rem 0;
